<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="RoomAddressClass">
        <variable
            name="viewModel"
            type="com.personal.homestayfinder.ui.home.addroom.AddRoomViewModel" />
        <variable
            name="roomAddressFragment"
            type="com.personal.homestayfinder.ui.home.addroom.RoomAddressFragment" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbar"
            style="@style/AddRoomToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:text="@string/Room_address"
                style="@style/AddRoomToolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:text="Hủy"
                android:onClick="@{() -> roomAddressFragment.cancel()}"
                android:background="@drawable/transparent_bg"
                style="@style/CancelButtonStyle"
                android:layout_gravity="end"
                android:layout_width="48dp"
                android:layout_height="match_parent"/>
        </Toolbar>
        <View
            android:id="@+id/line"
            android:background="@color/line_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/linear_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/CITY"
                    style="@style/medium_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/act_city"
                        android:background="@color/white"
                        android:hint="@string/Click_to_choose_city"
                        android:inputType="none"
                        android:text="@{viewModel.currentRoom.city.name}"
                        currentLocation="@{viewModel.currentRoom.city}"
                        locations="@{viewModel.cities}"
                        android:onItemClick="@{(parent, view, position, id) -> viewModel.onCitySelected(parent.getItemAtPosition(position))}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:text ="Vui lòng chọn thành phố"
                    isValidate="@{viewModel.cityValidate}"
                    style="@style/error_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/DISTRICT_COUNTY"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/medium_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/Click_to_choose_district_county"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/act_district_county"
                        android:background="@color/white"
                        android:inputType="none"
                        android:text="@{viewModel.currentRoom.district.name}"
                        currentLocation="@{viewModel.currentRoom.district}"
                        locations="@{viewModel.districts}"
                        android:onItemClick="@{(parent, view, position, id) -> viewModel.onDistrictSelected(parent.getItemAtPosition(position))}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:text ="Vui lòng chọn quận/huyện"
                    isValidate="@{viewModel.districtValidate}"
                    style="@style/error_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/WARD_COMMUNE"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/medium_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/Click_to_choose_ward_commune"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/act_ward_commune"
                        android:background="@color/white"
                        android:inputType="none"
                        android:text="@{viewModel.currentRoom.ward.name}"
                        currentLocation="@{viewModel.currentRoom.ward}"
                        locations ="@{viewModel.wards}"
                        android:onItemClick="@{(parent, view, position, id) -> viewModel.onWardSelected(parent.getItemAtPosition(position))}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:text ="Vui lòng chọn phường/xã"
                    isValidate="@{viewModel.wardValidate}"
                    style="@style/error_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/STREET_NAMES"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/medium_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/ed_street_names"
                    android:layout_marginTop="@dimen/margin_super_small"
                    android:text="@{viewModel.currentRoom.streetNames}"
                    android:onTextChanged="@{viewModel::onStreetNamesChanged}"
                    style="@style/edittext_style"
                    android:inputType="text"
                    android:hint="@string/Enter_street_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text ="Vui lòng nhập tên đường"
                    isValidate="@{viewModel.streetNamesValidate}"
                    style="@style/error_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/Apartment_number"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/medium_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/ed_apartment_number"
                    android:layout_marginTop="@dimen/margin_super_small"
                    android:text="@{viewModel.currentRoom.apartmentNumber}"
                    android:onTextChanged="@{viewModel::onApartmentNumberChanged}"
                    style="@style/edittext_style"
                    android:inputType="text"
                    android:hint="@string/Example"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text ="Vui lòng nhập số nhà"
                    isValidate="@{viewModel.apartmentNumberValidate}"
                    style="@style/error_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_next"
                    style="@style/cta_button_style"
                    android:onClick="@{() -> roomAddressFragment.goToNextScreen()}"
                    android:text="@string/Next"
                    android:layout_marginTop="@dimen/margin_med"
                    android:layout_marginBottom="@dimen/margin_med"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>